# enf-matching

./: .gitignore  LICENSE  Makefile  README.md  enf.py  flimmer.py  griddata.py  gridradar.py  hum.ipynb  hum.py  hum.spec  main.py  nationalgrideso.py  pyproject.toml  requirements.txt  setup.py  test.py
AppDir.template/: AppRun  hum.desktop
notebooks/: hum.ipynb
samplemedia/: 2024-08-19T15:26:02.csv
scripts/: README.md  correlate.py  download-sample-audio-files.sh  download.sh  faden.py  fft.py  fm.py  galenreich.py  get_live_data.py  gridradar.py  nationalgrideso.py  rs_sim.py  simplethread.py  video.py
